# posts-and-comments

./: .gitignore  Dockerfile  README.md  build.sh  db_schema.drawio  docker-compose.yaml  manage.py  pyproject.toml  Диаграмма без названия.drawio
blog/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_comment_text_alter_post_text_alter_reply_text.py
posts_and_comments/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: styles.css
templates/: base.html
templates/blog/: create_comment.html  create_reply.html  delete_comment.html  delete_post.html  delete_reply.html  edit_blog.html  edit_post.html  edit_reply.html  index.html  user_form.html
templates/includes/: header.html
templates/registration/: login.html
